--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
         </section>
     </div>
 
+    <script src="assets/js/analytics.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/text-analyzer.js"></script>
 </body>
