--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navey Puri - Personal Website</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 
 <body>
@@ -129,8 +129,8 @@
         </section>
     </div>
 
-    <script src="assets/js/analytics.js"></script>
-    <script src="assets/js/script.js"></script>
-    <script src="assets/js/text-analyzer.js"></script>
+    <script src="/assets/js/analytics.js"></script>
+    <script src="/assets/js/script.js"></script>
+    <script src="/assets/js/text-analyzer.js"></script>
 </body>
 </html>
